Ready to read 2

--- a/Commands.tex
+++ b/Commands.tex
@@ -2472,16 +2472,17 @@
 \end{comment}
 
 % Resphain, the Tiste Andii of \Miith{}.
-\newcommand{\Resphain}  {Resph\adarkresphan in\xspace}
-\newcommand{\Resphan}   {Resph\aflatresphan n\xspace}
-\newcommand{\resphain}  {Resph\adarkresphan in\xspace}
-\newcommand{\resphan}   {Resph\aflatresphan n\xspace}
+\newcommand{\Resphain}  {Resphain\xspace}
+\newcommand{\Resphan}   {Resphan\xspace}
+\newcommand{\resphain}  {resphain\xspace}
+\newcommand{\resphan}   {resphan\xspace}
+%\newcommand{\resphan}   {Resph\aflatresphan n\xspace}
 
 % Resviel, the female Resphain.
 \newcommand{\Resviel}  {Resviel\xspace}
 \newcommand{\Resvil}   {Resvil\xspace}
-\newcommand{\resviel}  {Resviel\xspace}
-\newcommand{\resvil}   {Resvil\xspace}
+\newcommand{\resviel}  {resviel\xspace}
+\newcommand{\resvil}   {resvil\xspace}
 
 % Neo-Resphain: The new and improved generation of Resphain.
 \newcommand{\NeoResphain} {Neo-\Resphain}
@@ -2799,10 +2800,10 @@
 \newcommand{\Humanity}     {Humanity\xspace}
 \newcommand{\Humans}       {Humans\xspace}
 \newcommand{\Human}        {Human\xspace}
-\newcommand{\humankind}    {Humankind\xspace}
-\newcommand{\humanity}     {Humanity\xspace}
-\newcommand{\humans}       {Humans\xspace}
-\newcommand{\human}        {Human\xspace}
+\newcommand{\humankind}    {humankind\xspace}
+\newcommand{\humanity}     {humanity\xspace}
+\newcommand{\humans}       {humans\xspace}
+\newcommand{\human}        {human\xspace}
 
 % True Humans.
 \newcommand{\Truehumans}   {True Humans\xspace}
@@ -3189,9 +3190,10 @@
 \newcommand{\Scathaese}        {Sc\along thaese\xspace}
 \newcommand{\Scathae}          {Sc\along thae\xspace}
 \newcommand{\Scatha}           {Sc\along tha\xspace}
-\newcommand{\scathaese}        {Sc\along thaese\xspace}
-\newcommand{\scathae}          {Sc\along thae\xspace}
-\newcommand{\scatha}           {Sc\along tha\xspace}
+\newcommand{\scathaese}        {scathaese\xspace}
+\newcommand{\scathae}          {scathae\xspace}
+\newcommand{\scatha}           {scatha\xspace}
+%\newcommand{\scatha}           {Sc\along tha\xspace}
 
 % Demiscathae.
 \newcommand{\Demiscathae}      {Demisc\along thae\xspace}
