--- a/HoldUntilICome.tex
+++ b/HoldUntilICome.tex
@@ -89,12 +89,16 @@
 \section{War}
 ``'Hold until I come'{}'', the captain read aloud from the telegram. ``'And protect the hierophant at all costs.' That is the message from Exalted Lord Iscrafel.'' 
 
-Murmuring broke out among the soldiers and others: ``Great Insharrad!'' and ``Jach-dun preserve us!'' 
+Murmuring broke out among the reptilian soldiers and others assembled in the citadel: ``Great Insharrad!'' and ``Jach-dun preserve us!'' 
 
 Filima Kepra did not understand what was going on in the world. 
 All he knew was that rumours said the resphan kingdoms had gone to war against the suchian nations. 
 
-Kepra looked out. From where he stood in the Cressax citadel courtyard he could not see only the walls. Those massive stone walls that looked impenetrable. 
+Kepra looked out. 
+They were on a roof in the Cressax citadel overlooking the massive stone walls. 
+From where he stood, far from the battlements, he could not see much outside; only the top of the walls. 
+%From where he stood in the Cressax citadel courtyard he could see only the walls. 
+Those massive stone walls looked impenetrable. 
 But out there somewhere to the west was an enemy army bent on their destruction.
 
 Why was there suddenly war? Why would the resphain attack? 
@@ -116,7 +120,7 @@ Kepra’s tongue darted out nervously to lick his eye.
 
 Cressax Outpost was an important site, housing not only a major zest refinery but more importantly one the Sacred Pillars of the Great Concord that kept the suchian race united. Surely the resphain could not intend to destroy or desecrate the Pillar? Surely not even a resphan was capable of such blasphemous evil? 
 
-Kepra turned his head to look at the Pillar. It was a marvel. On the outside a monolithic obelisk of white and black stone, adorned with figures of Epitomes, heroes and serpents in gold and brass and iron. And inside it was full of marvellous machinery devised by brilliant mages and engineers, consecrated to the Epitomes of the Concord\dash{}noble Kelesh, wise Suthalba and mystic Tsor. It was this machinery, channelled through the splendid obelisk and many other Pillars like it, that upheld the Divine Concord and thus kept all reptilians connected to each other and to the Epitomes. It was the Concord that allowed the Epitomes to guide all suchians and scathae to lead virtuous lives and contribute to the greatness and harmony of their civilization.
+Kepra turned his head to look at the Pillar, behind him near the centre of the citadel. It was a marvel. On the outside a monolithic obelisk of white and black stone, adorned with figures of Epitomes, heroes and serpents in gold and brass and iron. And inside it was full of marvellous machinery devised by brilliant mages and engineers, consecrated to the Epitomes of the Concord\dash{}noble Kelesh, wise Suthalba and mystic Tsor. It was this machinery, channelled through the splendid obelisk and many other Pillars like it, that upheld the Divine Concord and thus kept all reptilians connected to each other and to the Epitomes. It was the Concord that allowed the Epitomes to guide all suchians and scathae to lead virtuous lives and contribute to the greatness and harmony of their civilization.
 
 \emph{Would the resphain seek to destroy this? Is that how deep their evil goes?}
 
@@ -210,14 +214,16 @@ He was just a youth with a drum.
 He had once dreamed of being a mage, but that had proven too dangerous for one of his meagre talents. 
 So now he served as a fount. Not the most glorious of professions, but a perfectly respectable and well-paid one.
 
-He took his place at his giant bass drum, with a smaller drum behind him so he could also use his tail. 
+They were on the roof, several metres from the wall. 
+Kepra took his place at his giant bass drum, with a smaller drum behind him so he could also use his tail. 
 
 He looked around to see his friends. 
 The ones he knew best were of course his fellow founts in service to the ward-mage Tezoron Rarxan. 
 They were all in place. Grecca with his smaller drums. Sorom and Contor with their horns. Sipel with her flutes. 
-And there, robed in blue and silver and strapped into the ward machine, was master Tezoron. 
-It was she whose work Kepra and his fellows would be supporting. And over there was the other ward-mage, Griph Parun, and her founts. He did not know them quite as well, but they had trained in concert together. 
-They were supposed by several more musicians who were not founts.
+And there, robed in blue and silver and strapped into the ward machine, was Master Tezoron. 
+It was she whose work Kepra and his fellows would be supporting. And over there was the other ward-mage, Griph Parun, and her founts. 
+They were supported by several more musicians who were not founts.
+He did not know them quite as well, but they had trained in concert together. 
 
 \emph{We can do this.}
 
@@ -241,33 +247,34 @@ A glorious sight. If they survived to see it.
 \section{Mages}
 ``Enemy sighted!'' yelled a scout.
 
-From his position Kepra could not see the enemy, only the immense wall. He could only hear the news as it was passed back from the battlements. 
-The resphan army marched on the west gate. 
+From his position on the roof Kepra could not see the enemy over the wall. He could only hear the news as it was passed back from the battlements. 
 
+The resphan army marched on the west gate. 
 The so-called resphan army consisted almost entirely of humans\dash{}the lesser mammalian race. 
 Apparently the Fireborne reported five resphain. That was already bad enough. Kepra did not even want to think about the idea of facing a genuine army of resphain. 
 
 A mighty suchian warrior\dash{}like one of the Fireborne\dash{}might be a match for a resphan, but not a humble fount like Kepra. 
 
-\emph{I hate resphain. If only someone would wipe them out.} Were they even of this world? Or were the rumours true that the resphain hailed from some other world, some vast corpse-city of crumbling towers and eternal night?
+\emph{I hate resphain. If only someone would wipe them out.} 
+Were they even of this world? Or were the rumours true that the resphain hailed from some other world, some vast corpse-city of crumbling towers and eternal night?
 
 His reverie was broken by a gasp that rippled through the ranks of defenders. 
 Mutters of ``Jach-dun!''. 
 Kepra felt a foreign presence sweep over them.
 In his mind it was like a shower of heavy rocks, pounding them and weighing them down. 
 He peered out. 
-Above the wall he glimpsed a pair of shapes hovered above the enemy army.
+Beyond the wall, above where he figured the enemy army must be, he glimpsed a pair of hovering shapes.
 Like humans, but greater, with giant feathered wings on their backs. 
 Clad in gleaming jeweled armour and wielding wicked bladed weapons. 
 They soared like harbingers of death, evil coming off them in palpable waves. 
-Their fell eyes seemed to through pierce him with harpoons of dread, and Kepra had to resist the urge to cower. 
+Their fell eyes seemed to pierce through him with harpoons of dread, and Kepra had to resist the urge to cower. 
 
 \emph{What can they do? What dread sorcery might they wield?} 
 
 He felt exposed. 
 The walls could stop humans, but not flying resphain. 
 He wished for shelter.
-But of course the hierophant and mages and founts needed to be out in the open to oversee the defense. 
+But of course the hierophant and mages and founts needed to be out in the open on the roof to oversee the defense. 
 The last time Kepra had been on a battlefield they had at least had armoured carts and other shelter for the mages and founts. 
 \emph{But of course, if we'd been that well-prepared for war we'd also have more men.}
 %Of course, if they had been properly prepared for war they would also have more men.
@@ -300,7 +307,7 @@ Kepra began beating his drum. As bass drummer he was responsible for keeping the
 
 He had no spear or gun or armor. Just a drum. 
 %He felt unprepared. defenseless. 
-But he was just as important.
+But he was important.
 The others needed him. 
 The founts were vital. 
 
@@ -314,7 +321,7 @@ A five-beat rhythm, as was traditional in suchian music.
 The other founts and musicians joined in. 
 Soon Kepra began to feel the trance. 
 He felt the connection to his brethren\dash{}his fellow founts and Master Tezoron. And the hierophant Aeocryth, their spiritual matriarch, soaring above and guiding them all. 
-Now in trance, the founts could begin to share the strength of their minds and bodies with their master.
+Now in trance, the founts could begin to share the strength of their minds and bodies with their masters.
 
 They played a well-known battle song. 
 Those soldiers who could began to sing the words to the song. Some stomped their feet, some pounded their spears to the rhythm. Kepra felt them in the Concord. Though the soldiers and musicians were not trained founts and could not share their strength directly, they could still contribute to morale and help strengthen the Epitomes in everyone.
@@ -325,7 +332,7 @@ Master Tezoron Rarxan, now empowered by her loyal founts, began to chant spellwo
 Kepra could not understand much of the meaning. Mystic Talaac was difficult to understand; very different from High Talaac or his native dialect.
 But he knew the gist of it. It was a spell of warding. 
 
-Master Tezoron’s eyes rolled back. Her body shivered. She must be descending in her mind into the mystic Labyrinth. Kepra knew only hearsay about the dread Labyrinth; after all, he had failed the entrance exam to the academy of mages and had been told to train as a fount instead. 
+Tezoron’s eyes rolled back. Her body shivered. She must be descending in her mind into the mystic Labyrinth. Kepra knew only hearsay about the dread Labyrinth; after all, he had failed the entrance exam to the academy of mages and had been told to train as a fount instead. 
 As such, Kepra could only guess at the spectral horrors that his master must face on that benighted spiritual plane in order to work her sorcery. 
 
 Master Griph, Tezoron's colleague, was likewise murmuring her spellwords. 
@@ -354,13 +361,13 @@ Enemy artillery barked in the distance.
 
 And now the archers on the wall begin firing. The enemy must be close.
 
-After several misses, the first enemy artillery shell shattered against the barrier, sending crackling ripples of lightning across it. Master Tezoron shuddered and hissed through clenched teeth as if struck. Through the Concord Kepra felt a dull thud of that pain, like a punch to the brain. 
+After several misses, the first enemy artillery shell shattered against the transparent barrier, sending crackling ripples of lightning across it. Tezoron shuddered and hissed through clenched teeth as if struck. Through the Concord Kepra felt a dull thud of that pain, like a punch to the brain. 
 
-\emph{Stand firm, master! Jach-dun!} Kepra prayed as he sent her his energy.
+\emph{Stand firm, Master Tezoron! Jach-dun!} Kepra prayed as he sent her his energy.
 
 \drum{One two \emph{tail} four five. One-and-two \emph{tail} four \emph{tail}.}
 
-He felt the current of energy flowing into Master Tezoron. She relaxed and breathed deep.
+He felt the current of energy flowing into Tezoron. She relaxed and breathed deep.
 
 ``Well done, noble founts!'' said Aeocryth. ``That could have killed us!'' 
 Kepra felt a surge of courage at her words, like water to a thirsty throat. 
@@ -378,14 +385,14 @@ Kepra drummed on.
 
 \drum{One two-and-three four-and-five. One two-and-three four-and-five.}
 
-More shells struck the barrier. It seethed and threw sparks. But the founts did their duty. The barrier held.
+More shells struck the barrier above them. It seethed and threw sparks. But the founts did their duty. The barrier held.
 
 
 
 \section{Resphain}
 \drum{One two-and-three four \emph{tail}. One-and-two \emph{tail} four-and-five.}\nopagebreak
 
-Suddenly a swift jab of pain. A fellow fount cried out and stumbled for a moment. Out of the corner of his eye Kepra saw a great arrow clattering to the ground, stopped by the barrier.
+Suddenly a swift jab of pain. A fellow fount cried out and stumbled for a moment. Out of the corner of his eye Kepra saw a great arrow clattering to the ground, stopped by the aerial barrier.
 
 Another stab of pain through the Concord. 
 Another arrow dropped to the ground.
@@ -405,7 +412,7 @@ The weapon must be consecrated to whatever dark nameless powers the resphain pra
 
 The resphan soared, unable to draw back his bow while beating his wings. 
 Then he dove again and loosed. This time one arrow punched through the barrier with a resounding crack. 
-A spearman wailed, impaled on the arrow. Master Tezoron pounded her fist on something and growled in frustration. She hissed spellwords. 
+A spearman wailed, impaled on the arrow. Tezoron pounded her fist on something and growled in frustration. She hissed spellwords. 
 
 Again Kepra felt the watchful presence of the hierophant, soothing their fears and keeping them standing.
 
@@ -439,6 +446,8 @@ And there, throbbing within all of them, was Asheen\dash{}the Divine Principle o
 %Throbbing within all of them. 
 %Kepra felt his fellows’ need. 
 
+The other musicians were still playing, but there was an unsteadiness to their rhythm.
+
 \emph{That's right. My fellows need me. We are all in this together. Asheen.}
 
 Kepra picked up the rhythm.
@@ -471,7 +480,13 @@ Kepra thought of his beloved clan, the Filima brood. His brothers and cousins. T
 
 Emboldened by Asheen, scatha spearmen rushed the talon-bearing resphan woman and managed to drive her off the walls. 
 
-Kepra looked around. Many defenders were wounded or slain\dash{}some felled by enemy shot, some cut down by the cruel resphain. 
+Kepra looked around. 
+Artillery pounded on both sides.
+He could not see what was happening outside. 
+He could only hope that the wall would hold and stop the bulk of the enemy army.
+These flyers were bad enough.
+
+Already many defenders were wounded or slain\dash{}some felled by enemy shot, some cut down by the cruel resphain. 
 The remnants of the loyal humans were holding their ground, to their credit. 
 Even with several of their number fallen and without Asheen and Zotha they remained loyal. None had laid down arms and fled. 
 
@@ -481,19 +496,21 @@ Even with several of their number fallen and without Asheen and Zotha they remai
 
 The taloned resphan returned. This time she flew high over the wall and dove straight down in their midst. 
 %She flies straight through the barrier\dash{}for it protects only against projectiles. 
-The barrier only protected against missile weapons, so she passed right through it. 
+The barrier was only proof against light, fast-moving objects like projectiles, so she passed right through it. 
 She flew low over the defenders, shrugging off spear-jabs and kicking with her daemoniac blades. 
 %Soldiers jabbed at her with their spears. 
 Soldiers gasped as they fell to her talons.
 
-The resphan swooped right past Kepra’s head to swing at Master Tezoron and the ward machine. 
-Light flashed and sparks flew as she shattered some of the tubes. 
+The resphan swooped right past Kepra’s head to swing at Tezoron and the ward machine. 
+Light flashed and sparks flew as she shattered some of the tubes of the device. 
 
 Tezoron fell to the ground. 
 
 Kepra froze. He missed several beats. 
 
-Aeocryth seized him in a spiritual iron fist: 
+The others also faltered. The music fizzled out.
+
+Aeocryth seized Kepra in a spiritual iron fist: 
 ``Founts, focus! Falter and we die! Stand together and we live!'' 
 
 Before Kepra could think, he felt the drumstick in his hand pounding on the drum again. 
@@ -506,11 +523,13 @@ Aeocryth had picked him up again. He had his rhythm back.
 
 \emph{Bless you, holy one!} he quietly praised her.
 
+The musicians joined in.
+
 \drum{One two-and-three four-and-five. One two-and-three four-and-five.}
 
 \emph{We must hold. Think of the brood. Think of the little ones and the eggs!}
 
-The female resphan came back for yet another pass. She swooped near, her daemoniac talon-swords leaving a kind inky shadows behind where they swung, like blackened wounds of death in the fabric of the world itself. 
+The female resphan came back for yet another pass. She swooped near, her daemoniac talon-swords leaving a kind of inky shadows behind where they swung, like blackened wounds of death in the fabric of the world itself. 
 A soldier fell, head severed. 
 
 Kepra kept drumming. 
@@ -528,7 +547,12 @@ He looked up from the ground.
 The resphan had flown past and was out of sight for the moment. 
 But his bass drum was damaged now.
 Without his drum, what could he do? 
-He looked around. So many defenders had fallen. Tezoron Rarxan was down\dash{}perhaps killed. He could not see the other ward mage. 
+He looked around. 
+So many defenders had fallen. 
+The music had been interrupted.
+Enemy artillery was still firing.
+Tezoron Rarxan was down\dash{}perhaps killed. 
+He could not see the other ward mage. 
 
 Where was the hierophant? 
 
@@ -618,7 +642,7 @@ Kepra fired.
 At this point-blank range the bullet tore through the resphan’s wing. 
 Bloody feathers scattered. 
 She let out a snarl of outrage. 
-She turned to face him. 
+She spun to face him. 
 Her eyes drilled through him and transfixed him with terror. 
 Those eyes seem to suck out his soul, like vortex tunnels to some horrific world of eternal blackness and death. 
 
@@ -675,13 +699,13 @@ A strangled grunt from Aeocryth.
 
 A gunshot barked from behind him, cutting through the droning sound. 
 Another bullet struck the resphan’s wings, tearing free feathers and blood. 
-Kepra turns his head. 
+Kepra turn his head. 
 
 \emph{Sipel!} His fellow fount Hesca Sipel. She had also found a gun and fired at the resphan.
 
 Sipel had a trance-like look on her face.
 Like the music trance, but not quite.
-Her eyes gleamed with a deep clarify and purpose.
+Her eyes gleamed with a deep clarity and purpose.
 
 Sipel charged with her bayonet. 
 
@@ -721,7 +745,7 @@ The resphan bore down on him yet again.
 %The resphan turns around. She faces Kepra. 
 %Again he feels a clutch of dread. His bruise ached, remembering their last clash. 
 
-Kepra was aware of clutch of dread.
+Kepra was aware of a clutch of dread.
 But it was dull, blurred. He was removed from it, as if swimming in water. 
 Around him was the Concord. 
 It was thick and warm. 
@@ -768,7 +792,7 @@ A machine voice booming with Epitomes of vengeance and hatred.
 And in the next moment, blasts of cannons. 
 
 The resphan gave a start and snapped around to look up at the sky behind Kepra. 
-Kepra's jaw and skull shook as the earth beneath him buckled from the impact of great lead balls smashing into the ground. 
+Kepra's jaw and skull shook as the roof beneath him buckled from the impact of great lead balls smashing into it. 
 
 The resphan kicked off and took flight. 
 
@@ -813,7 +837,7 @@ A blink of an eye.
 Then Iscrafel is upon them. 
 The dragon lashes out with an enormous blade embedded in his metallic arm. 
 % Iscrafel closes and lashes out with an enormous blade embedded in his metallic arm. 
-An explosion of sparks erupt as a resphan’s armour and wards shatter before the Juggernaut’s fury. 
+An explosion of sparks erupts as a resphan’s armour and wards shatter before the Juggernaut’s fury. 
 The resphan falls to the ground in two bleeding pieces. 
 The other resphan turns tail and flees. 
 Not fast enough. 
@@ -863,7 +887,7 @@ Mystic Talaac.
 
 A spellword.
 
-Spoken in a loud, metallic baritone. 
+A booming metallic bass voice. 
 
 %\sectionbreak
 Pain returns. 
@@ -945,6 +969,8 @@ Few had been as lucky as him.
 %lucky enough that they could be healed. 
 In fact, few of anything remained alive. 
 
+The cannons had fallen silent.
+
 In the distance he thought he could hear the footsteps of the fleeing resphan army. 
 
 ``Where is your army, Exalted Lord?''
@@ -978,7 +1004,7 @@ Iscrafel was clad only in his lesser body now\dash{}half machine and hugely mass
 
 Iscrafel gazed out over the battlefield beyond the walls as he listened. 
 %His metal claws idly scraped on the walls.
-He remained silent. 
+He remained silent, merely letting Asheen flow between them. 
 
 %``At times I wished I had never become a hierophant. 
 ``You should not have told them to protect me `at all costs'!''
@@ -1044,8 +1070,9 @@ Some notes about my home-made phonetics:
   \pitem{Iscrafel}{}{IS-kra-fel}
   \pitem{Jach-dun}{}{jaach-DOON}
   \pitem{Kelesh}{}{ke-LESH}
-  \pitem{resphain}{}{RES-fain}
-  \pitem{resphan}{}{RES-fän}
+  \pitem{Mysteriarch}{}{mis-TE-ri-aark}
+  \pitem{resphain}{}{REZ-fain}
+  \pitem{resphan}{}{REZ-fän}
   \pitem{Quessanth}{}{KWES-saanth}
   \pitem{Rystessakhin}{}{ris-TES-ä-kheen}
   \pitem{Saphyr}{}{sä-FEER}
@@ -1056,7 +1083,7 @@ Some notes about my home-made phonetics:
   \pitem{Suthalba}{}{SOO-thäl-bä}
   \pitem{Talaac}{[tæla:k]}{tä-LAAK}
   \pitem{Tezoron}{}{TEZ-o-ron}
-  \pitem{Zotha}{}{ZO-tha}
+  \pitem{Zotha}{}{ZOTH-a}
 \end{pronunciationenvironment}
 
 
@@ -1067,204 +1094,142 @@ Some notes about my home-made phonetics:
 
 
 
-% \section{Glossary}
-% \begin{gloss}
-% 
-% 
-% 
+\section{Glossary}
+\begin{gloss}
+
+
+
+\begin{comment}
+\paragraph{Asheen}
+\end{comment}
+\gitem{Asheen}
+The Holy Principle of Harmony in suchian spirituality, representing the drive to serve one's fellows and community.
+
+
+
+\begin{comment}
+\paragraph{brood}
+\end{comment}
+\gitem{brood}
+A suchian clan or extended family. 
+The basic unit of suchian society.
+
+
+
+\begin{comment}
+\paragraph{Epitome}
+\end{comment}
+\gitem{Epitome}
+One of many holy virtues revered by the suchians and scathae. 
+Sometimes viewed as personified godlike entities.
+They include Insharrad, Jach-dun, Druzcalacht, Kelesh, Suthalba, Tsor and others.
+
+
+
+\begin{comment}
+\paragraph{fount}
+\end{comment}
+\gitem{fount}
+A suchian who assists a mage by providing energy.
+Founts may double as musicians, bodyguards, manservants or other functions.
+
+
+
+\begin{comment}
+\paragraph{Felgian}
+\end{comment}
+\gitem[Felgians]{Felgian}
+A suchian ethnic minority. 
+
+
+
+\begin{comment}
+\paragraph{Fireborne}
+\end{comment}
+\gitem{Fireborne}
+A flying suchian knight.
+
+
+
+\begin{comment}
+\paragraph{hierophant}
+\end{comment}
+\gitem{hierophant}
+A suchian high priest and spiritual leader.
+
+
+\begin{comment}
+\paragraph{\human}
+\end{comment}
+\gitem{\human}
+\target{Human}
+A humanoid race, sometimes called the lesser mammalian race.
+
+
+
 % \begin{comment}
-% \paragraph{Arcanum}
+% \paragraph{Labyrinth}
 % \end{comment}
-% \gitem[Arcana]{Arcanum}
-% \target{Arcanum}
-% Generic term for mystic secrets or teachings to be studied and internalized. 
-% Curricula in magic are often organized as a series of Arcana.  
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\daemon}
-% \end{comment}
-% \gitem[\daemons]{\daemon}
-% \target{Daemon}
-% \target{Daemons}
-% Incorporeal entities that dwell in the Beyond. 
-% Believed to be mostly mindless. 
-% 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\human}
-% \end{comment}
-% \gitem{\human}
-% \target{Human}
-% A \maybehs{humanoid} race. 
-% One of the most widespread humanoid races on \Miith{}, alongside the \scathae. 
-% Founders and rulers of the \VaimonCaliphate. 
-% 
-% 
-% 
-% \begin{comment}
-% \subsection{\iquin}
-% \end{comment}
-% \gitem{\iquin}
-% \index{Light}
-% \target{Iquin}
-% \target{Light}
-% The force of Light in \hs{Vaimon} metaphysics. 
-% By the \hs{Iquinian Church} viewed as the source of all good and worshipped as a divine force. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\Iquinian Church}
-% \end{comment}
-% \gitem{\Iquinian Church}
-% \target{Iquinian Church}
-% \target{Iquinian}
-% A Vaimon religion based around the worship of \hr{Iquin}{\Iquin}. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{Isxae}
-% \end{comment}
-% \gitem{\Isxae}
-% \target{Isxae}
-% \Ortaican goddess of law and rulership.
-% 
-% 
-% 
-% \begin{comment}
-% \subsection{\itzach}
-% \end{comment}
-% \gitem{\Itzach}
-% \target{Itzach}
-% The force of Darkness in \hs{Vaimon} metaphysics. 
-% By the \hs{Iquinian Church} reviled as the source of all evil. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{mosca}
-% \end{comment}
-% \gitem{mosca}
-% \target{Mosca}
-% A large lizard. 
-% Eaten in some cultures as a delicacy.
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{Kush}
-% \end{comment}
-% \gitem{Kush}
-% \target{Kush}
-% A pre-\scathaese civilization. 
-% Its language\dash written in a unique sinuous script\dash is still used in some spells. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{Nasshikerr}
-% \end{comment}
-% \gitem{\Nasshikerr}
-% \target{Nasshikerr}
-% \Ortaican goddess of shadows and the hidden.
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\Ortaica}
-% \end{comment}
-% \gitem{\Ortaica}
-% \target{Ortaica}
-% A great \hr{Scatha}{\scatha}-dominated realm that flourished after the fall of the \maybehr{Vaimon Caliphate}{\VaimonCaliphate}. 
-% 
-% 
-% 
-% % \begin{comment}
-% % \paragraph[Baccon]{\baccon}
-% % \end{comment}
-% % \gitem[\baccons]{\baccon}
-% % \index{\bacconate}
-% % \target{Bacconate}
-% % A ruling council in certain (predominantly \scathaese{}) cultures. 
-% % Typically aristocratic in nature. 
-% % A realm ruled by a \baccon{} is called a \bacconate{}. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\rethyax}
-% \end{comment}
-% \gitem[\rethyaxes]{\rethyax}
-% \target{Rethyax}
-% A \hr{Scatha}{\scatha}-dominated order of mages, founded by the \maybehr{Ortaica}{\Ortaicans}. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\scatha}
-% \end{comment}
-% \gitem[\scathae]{\scatha}
-% \target{Scatha}
-% A race of reptilian \maybehs{humanoids}. 
-% A \scatha{} resembles a bipedal dinosaur with a long, rigid tail. 
-% They walk on straight legs and with a horizontal spine like bipedal dinosaurs, not with a vertical spine like \humans.
-% An average adult is 170-180 cm tall or long. 
-% They have tough scaly skin and are omnivorous. 
-% 
-% The \scathae{} are one of the most widespread humanoid races on \Miith{}, alongside \hr{Human}{\humans}. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{Talaac}
-% \end{comment}
-% \gitem{Talaac}
-% \index{Talaac}
-% \index{Mystic Talaac}
-% \target{Talaac}
-% A language spoken by \dragons and some humanoids. 
-% Written in a cuneiform script. 
-% The arcane variant of the language, called Mystic Talaac, is used in many spells. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{Vaimon}
-% \end{comment}
-% \gitem{Vaimon}
-% \index{Vaimon}
-% \target{Vaimon}
-% \target{Vaimons}
-% A \hr{Human}{\human}-dominated order of \maybehs{mages}.
-% Their magic theory is based around the two forces of \hr{Iquin}{\iquin} and \hr{Itzach}{\itzach}. 
-% Many Vaimons follow the \hr{Iquinian Church}{Iquinian} religion.
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{\VaimonCaliphate}
-% \end{comment}
-% \gitem{\VaimonCaliphate}
-% \target{Vaimon Caliphate}
-% \index{\VaimonCaliphate}
-% A \human-dominated theocratic empire ruled by the \hs{Vaimons}. 
-% It existed from the year \yic{Founding of the Vaimon Caliphate}, where it was founded by \maybehs{Cordos Vaimon}, and until the \maybehr{Hundred Scourges}{\HundredScourges} in the year 	\yic{Hundred Scourges} where it fell, during the reign of \maybehr{Belzir}{\Belzir}. 
-% 
-% 
-% 
-% \begin{comment}
-% \paragraph{Yormis}
-% \end{comment}
-% \gitem{\Yormis}
-% \index{\Yormis}
-% An \Ortaican city. 
-% After the fall of \Ortaica \Yormis resisted all attempts at conquest and became a sovereign city-state. 
-% It has a reputation as a city of black sorcerers. 
+% \gitem{Labyrinth}
+% A spiritual plane that a mage can project his mind into.
+
+
+
+\begin{comment}
+\paragraph{Mysteriarch}
+\end{comment}
+\gitem{Mysteriarch}
+A suchian sorcerer-king.
+
+
+
+\begin{comment}
+\paragraph{\resphan}
+\end{comment}
+\gitem[\resphain]{\resphan}
+A humanoid race, sometimes called the greater mammalian race.
+They resemble humans but are larger. 
+Some resphain have feathered wings and can fly.
+
+
+
+\begin{comment}
+\paragraph{Saphyr}
+\end{comment}
+\gitem{Saphyr}
+A large suchian ethnic group, covering many subgroups, and the family of languages they speak. 
+
+
+
+\begin{comment}
+\paragraph{\scatha}
+\end{comment}
+\gitem[\scathae]{\scatha}
+A race of reptilian humanoids, sometimes called the lesser reptilian race.
+They walk on straight legs and with a horizontal spine like bipedal dinosaurs, not with a vertical spine like \humans. 
+
+
+
+\begin{comment}
+\paragraph{Talaac}
+\end{comment}
+\gitem{Talaac}
+\index{Talaac}
+\index{Mystic Talaac}
+\target{Talaac}
+A large suchian ethnic group, covering many subgroups, and the family of languages they speak. 
+The most prestigious dialect is called High Talaac.
+Another Talaac language is Mystic Talaac, used by mages.
+Talaac languages are written in a cuneiform script. 
+
+
+
+\begin{comment}
+\paragraph{Zotha}
+\end{comment}
+\gitem{Zotha}
+The Holy Principle of Greatness in suchian spirituality, representing the striving for achievement.
+
 
 
 
@@ -1286,5 +1251,5 @@ Some notes about my home-made phonetics:
 
 
 
-% \end{gloss}
+\end{gloss}
 \end{document}
