--- a/Hyphenation.tex
+++ b/Hyphenation.tex
@@ -17,12 +17,12 @@
   drip-ping
   e-pi-pha-ny
   fav-oured
-  G\"an-e-thed
+%   G\"an-e-thed
   Gho-bal-eth
   ha-ha-ha
   half-way
   hu-man-oids
-  Ish-na-ru-cha\"e-fir
+%   Ish-na-ru-cha\"e-fir
   Kse-ras-sha-na
   la-by-rinth-ine
   lan-guage 
@@ -32,7 +32,7 @@
   my-tho-lo-gy
   myst-raacht
   myst-raacht
-  m\"yst-raacht
+%   m\"yst-raacht
   Nas-shi-kerr
   Nex-agg-la-chel
   Nith\rq dor-nazsh
@@ -42,8 +42,9 @@
   pole-arm
   pro-phe-cy
   ras-sha-na
-  Res-phan
-  Res-phain
+  res-phan
+  res-phain
+  res-phain's
   Run-ge-ran
   Shae\rq e-roth
   shape-shift
@@ -51,12 +52,12 @@
   sou-thern
   Stru-thi-o-mi-mus
   su-prem-a-cy
-  Tesh-ri-\"al
-  Th\"an-\"a-tzil
+%   Tesh-ri-\"al
+%   Th\"an-\"a-tzil
   Thi-ma-red
   Ty-des-mos
   ven-geance
-  Vin-c\`erre
+%   Vin-c\`erre
   Viz-she-ri-och
   Way-thane
   xzai-ras-sha-na
